--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                             <div>
 
                                 <label>Player Color
-                                    <input class='jscolor'>
+                                    <input name='snakeColor' class='jscolor'>
                                 </label>
                                 <label>
                                     Random Player Colours
-                                <input type='checkbox' = "randomPlayerColor">
+                                <input name='randomPlayerColor' type='checkbox' = "randomPlayerColor">
                                 </label>
 
                             </div>
@@ -111,12 +111,12 @@
                             <div>
                                 <label>
                                     Food Color
-                                    <input class='jscolor' value="F00">
+                                    <input name='foodColor' class='jscolor' value="F00">
                                 </label>
                                 
                                 <label>
                                     Random food Color
-                                    <input type='checkbox' name='randomFoodColor' >
+                                    <input name='randomFoodColor' type='checkbox' name='randomFoodColor' >
                                 </label>
                                 
                             </div>
